<resources>
    <string name="app_name">SitterAPP</string>
    <string name="babySitter" translatable="false">Baby Sitter</string>

    <!-- Stringhe form registrazione -->
    <string name="nomeCompleto">Full name</string>
    <string name="password" translatable="false">Password</string>
    <string name="confermapassword">Confirm Password</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="cognome">Surname</string>
    <string name="telefono">"Phone "</string>
    <string name="descrizione">Description</string>
    <string name="nome">Name</string>
    <string name="nazione">Nation</string>
    <string name="provincia">District</string>
    <string name="citta">City</string>
    <string name="cap">Postcode</string>
    <string name="via">Street</string>
    <string name="civico" translatable="false">n°</string>
    <string name="sesso">Gender</string>
    <string name="automunito">Car</string>
    <string name="datanascita">Birthday</string>
    <string name="foto">Picture</string>
    <string name="tariffa">Hourly Pay</string>
    <string name="figlinum">Children Number</string>


    <plurals name="numfigli">
        <item quantity="one">Child</item>
        <item quantity="other">Children</item>
    </plurals>

    <string name="animali">Pets</string>
    <string name="numlavori">Engages</string>
    <string name="giorno">Day</string>
    <string name="fasciaoraria">Time slot</string>
    <string name="testocommento">Comment...</string>
    <string name="punteggio" translatable="false">Rating</string>
    <string name="annuncio">Notice</string>
    <string name="data">Date</string>
    <string name="orainizio">Start Time</string>
    <string name="orafine">End Time</string>
    <string name="uomo">Male</string>
    <string name="donna">Female</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="calendar">Calendar</string>
    <string name="engagements">Engagements</string>
    <string name="registrazione">Registration</string>
    <string name="confermaRegistrazione">Confirm Registration</string>
    <string name="login">Login</string>
    <string name="createAccountSitter">Register as Babysitter</string>
    <string name="createAccountFamily">Register as Family</string>
    <string name="lblMyAccount">Personal Account</string>
    <string name="loginSuccess">Login successfull.</string>
    <string name="loginerror">Incorrect Username or Password.</string>
    <string name="registrationSuccess">Registration was successfull.</string>
    <string name="registrationFail">Registration failed.</string>
    <string name="missingFields">Fill the missing fields.</string>
    <string name="checkPassword">Passwords don\'t match.</string>
    <string name="invalidEmail">Invalid email.</string>
    <string name="usedUsername">Username already used.</string>
    <string name="review">Reviews</string>
    <string name="modificaProfiloOn">Edit Profile</string>
    <string name="contattaSitter">Contact Sitter</string>
    <string name="modificaProfiloOff">Confirm Edit</string>
    <string name="contattaFamiglia">Contact Family</string>
    <string name="nuovoUtenteDomanda">Are you new on SitterApp?</string>
    <string name="dettaglioAnnuncio">Notice Details</string>
    <string name="profileError">There was an error in opening the profile.</string>
    <string name="visualizzaProfiloFamiglia">Open Family Profile</string>
    <string name="candidami">Apply me</string>
    <string name="missingdescription">Describe yourself...</string>
    <string name="genericError">An error occurred. Retry.</string>
    <string name="modifySuccess">Edit complete</string>
    <string name="Home" translatable="false">Home</string>
    <string name="lasciaFeedback">Write Feedback</string>
    <string name="eliminaAnnuncio">Delete Notice</string>
    <string name="visualizzaCandidate">Show Responses</string>
    <string name="eliminaCandidatura">Delete Application</string>
    <string name="confermaCandidaturaSit">Confirm Application</string>
    <string name="confermaEliminaCandidatura">Are you sure to delete your application?</string>
    <string name="confermaConfermaCandidaturaSit">Family chosen you for this notice. Do you wnat to confirm?</string>
    <string name="giudizio">Your overall rating of this experience</string>
    <string name="yourReview">Your Review:</string>
    <string name="inviaRecensione">Submit your review</string>
    <string name="tariffaAssente">Hourly pay not defined.</string>
    <string name="descrizioneAssente">Ask directly for more info!</string>
    <string name="miei_feedback">My Review</string>
    <string name="scrivi_recensione">Write Review</string>
    <string name="recensioniScritte">Reviews Written</string>
    <string name="recensioniRicevute">Reviews Received</string>
    <string name="destinatario">To:</string>
    <string name="nuovoAnnuncio">New Notice</string>
    <string name="pubblicaAnnuncio">Post Notice</string>
    <string name="selezionaOra">Select Time</string>
    <string name="annuncioPubblicato">Notice published.</string>
    <string name="annuncioCancellato">Notice is deleted.</string>
    <string name="annuncioNonCancellato">Notice is not deleted.</string>
    <string name="sceltaAzione">Choose how to perform the action:</string>
    <string name="sms" translatable="false">SMS</string>
    <string name="chiamata">Call</string>
    <string name="deleteSuccess">Elimination was successfull.</string>
    <string name="deletefail"> can not delete the ad.</string>
    <string name="candidateSucces">Application completed correctly</string>
    <string name="candidatefail"> Application error.</string>
    <string name="visualizzaProfiloSitter">Show sitter profile</string>
    <string name="assegnaIncarico">Assigns an assignment</string>
    <string name="engagementToConfirm">To do</string>
    <string name="engagementToDo">Done</string>
    <string name="engagementDone">To confirm</string>


    <!-- Stringhe per il dialog Scatta/Carica foto -->
    <string name="takePic">Take picture</string>
    <string name="uploadImg">Upload image</string>
    <string name="choosePic">Choose avatar</string>


    <!-- Stringhe per il dialog disponibilità -->

    <string name="DisponibilitaSitter">Sitter availabiity</string>
    <string name="Monday">Mon</string>
    <string name="Tuesday">Tue</string>
    <string name="Wednesday">Wed</string>
    <string name="Thursday">Thu</string>
    <string name="Friday">Fri</string>
    <string name="Saturday">Sat</string>
    <string name="Sunday">Sun</string>
    <string name="Morning">Morning</string>
    <string name="Afternoon">Afternoon</string>
    <string name="Evening">Evening</string>
    <string name="Cancel">Cancel</string>
    <string name="SaveChanges">Save Changes</string>
    <string name="editDisp">Edit Availability</string>


    <string name="profilo">Profile</string>
    <string name="nuovoUtente">New User</string>
    <string name="nuovaFamiglia">I\'m looking for a babysitter</string>
    <string name="nuovaSitter">I am a babysitter</string>
    <string name="recensioneEffettuata">Review sent correctly!</string>
    <string name="registrazioneStringa">Sign up now</string>
    <string name="esperienza">Experience (n° of engangments)</string>
    <string name="disponibilita">Availability</string>
    <string name="maggiore0">More than 0</string>
    <string name="maggiore5">More than 5</string>
    <string name="maggiore10">More than 10</string>
    <string name="filtro">Search Filters</string>
    <string name="applicFiltro">Apply Filters</string>


    <!-- Servono per il TextInputLayout -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <string name="back">Back</string>
    <string name="from">From:</string>
    <string name="scaduto">Expired</string>
    <string name="in_attesa">Waiting for confirm</string>
    <string name="confermato">Confirmed</string>
    <string name="mail_oggetto">SitterApp: engagments</string>
    <string name="mail_testo">Email sent by SitterApp</string>
    <string name="sms_testo">SMS from SitterApp:</string>
    <string name="lista_vuota">Empty List</string>
    <string name="niente_recensioni">User has no reviews</string>
    <string name="niente_annunci">No notice to show</string>
    <string name="niente_sitter">No baby sitter to show</string>
    <string name="niente_scrivi_recensioni">Nothing to review</string>
    <string name="niente_recensioni_ricevute">No review received</string>
    <string name="niente_recensioni_scritte">No review written</string>
    <string name="niente_famiglia">No family to show</string>
    <string name="niente_messaggi">No message to show</string>
    <string name="lavoroAssegnato">Engagment Assigned</string>
    <string name="permessoRichiesto">Permession needed</string>
    <string name="stringPermissionRequest">Permission is required to complete the operation. Do you want to authorize?</string>

    <string name="usaGalleria">Choose image from Gallery</string>
    <string name="usaCamera">Take a photo with your camera</string>
    <string name="risutltatoCaricamento">Photo changed correctly</string>

    <string name="yes">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="attention">Attention</string>
    <string name="loginMessage">To use this functionality, you must sign in.</string>
    <string name="signIn">Sign In</string>
    <string name="registrazioneFamily">New Family</string>
    <string name="registrazioneSitter">New Sitter</string>
    <string name="confermaCandidatura">Confirm your candidature?</string>
    <string name="confermaIncarico">Do you want to assign this engage to this Babysitter?</string>
    <string name="caricamentoFoto">Loading...</string>
    <string name="ContentDescriptionClockImage">Clock image</string>
    <string name="ContentDescriptionCalendarImage">Calendar image</string>
    <string name="confirm">Confirm</string>
    <string name="hint_enter_a_message">Type a message…</string>
    <string name="on_log_click_message">Your custom long click handler</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="copied_message">Message copied!</string>
    <string name="sender">sender</string>
    <string name="receiver">receiver</string>
    <string name="To">To:</string>

</resources>
