<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/Home"
            />

        <item
            android:id="@+id/nav_engagements"
            android:icon="@drawable/ic_work_black_24dp"
            android:title="@string/engagements" />

        <item
            android:id="@+id/nav_recensioni_mie"
            android:icon="@drawable/ic_action_feedback"
            android:title="@string/miei_feedback" />

        <item
            android:id="@+id/nav_scrivi_feedback"
            android:icon="@drawable/ic_scrivi_recensione"
            android:title="@string/scrivi_recensione" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
