<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chat_sitter"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/chat" />

        <item
            android:id="@+id/nav_engagements_sitter"
            android:icon="@drawable/ic_work_black_24dp"
            android:title="@string/engagements" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_settings_sitter"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_exit_sitter"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
