<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardNoticeItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="#fff"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/scadutoCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"
            android:text="@string/scaduto"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imageViewData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/appuntamento_item_data"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/trattino"
            android:paddingLeft="8dp"
            app:srcCompat="@drawable/ic_data" />

        <TextView
            android:id="@+id/appuntamento_item_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="8dp"
            android:text="@string/username"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageViewOrario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/appuntamento_item_start"
            android:layout_alignTop="@+id/appuntamento_item_start"
            android:layout_toStartOf="@+id/appuntamento_item_start"
            app:srcCompat="@drawable/ic_time" />

        <TextView
            android:id="@+id/trattino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/appuntamento_item_start"
            android:layout_alignBottom="@+id/appuntamento_item_start"
            android:layout_toStartOf="@+id/appuntamento_item_end"
            android:text="-"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/appuntamento_item_data"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appuntamento_item_detail"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/imageViewData"
            android:padding="8dp"
            android:text="@string/data"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/appuntamento_item_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appuntamento_item_detail"
            android:layout_toStartOf="@+id/trattino"
            android:padding="8dp"
            android:text="@string/orainizio"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/appuntamento_item_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/appuntamento_item_start"
            android:layout_alignBottom="@+id/appuntamento_item_start"
            android:layout_alignParentEnd="true"
            android:padding="8dp"
            android:text="@string/orafine"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/appuntamento_item_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/appuntamento_item_username"
            android:padding="8dp"
            android:text="@string/dettaglioAnnuncio"
            android:textSize="16sp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>